--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
 
 <body>
   <main>
-    <section class="card">
-      <div class="card-img">
-      </div>
+    <article class="card">
+      <figure class="card-img">
+      </figure>
       <div class="card-content">
         <p class="card-content-perfume">Perfume</p>
         <h1 class="card-product-name">Gabrielle Essence Eau De Parfum</h1>
@@ -41,7 +41,7 @@
 
       </div>
 
-    </section>
+    </article>
   </main>
 </body>
 
